base/proxy/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
spec:
  selector:
    matchLabels:
      role: gateway
      app: proxy
  template:
    metadata:
      labels:
        role: gateway
        app: proxy
    spec:
      containers:
      - name: proxy
        image: nginx:stable-alpine
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-configmap
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: log
        emptyDir: {}
